objects/ssot__AiAgentMoment__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AiAgentApiName__c</fullName>
        <label>AI Agent API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AiAgentSessionId__c</fullName>
        <label>AI Agent Session</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AiAgentVersionApiName__c</fullName>
        <label>AI Agent Version API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndTimestamp__c</fullName>
        <label>End Timestamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>AI Agent Moment Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequestSummaryText__c</fullName>
        <label>Request Summary Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResponseSummaryText__c</fullName>
        <label>Response Summary Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartTimestamp__c</fullName>
        <label>Start Timestamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1748836589057_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AiAgentMoment_AiAgentSessionId_map_A_rel</label>
        <referenceTo>ssot__AiAgentSession__dlm</referenceTo>
        <relationshipLabel>AiAgentMoment_AiAgentSessionId_map_A_rel</relationshipLabel>
        <relationshipName>rel_1748836589057_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>